fixed overflow issue on navbar

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,6 @@
   font-family: Nunito-sans-extra-bold;
   src: url('../public/fonts/NunitoSans-ExtraBold.ttf');
 }
+.homeMain{
+  overflow-x: hidden;
+}
