--- a/src/component/NavBar.css
+++ b/src/component/NavBar.css
@@ -8,6 +8,8 @@
     left:0px;
 
     position:absolute;
+    overflow-x: hidden;
+    overflow-y:hidden;
 }
 #navBarHeader{
     color:white;
